Closes GEOS-2853. Make sidebar absolutely positioned to prevent inappropriate float clearing leading to extraneous whitespace.
git-svn-id: http://svn.codehaus.org/geoserver/trunk/src@12110 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: de2560fc709c12b37acdf46b8faaf9c3d3b03970 [formerly baec2c302f96aa4f2e3ab2a31fb4c30d601909d4]
Former-commit-id: df575d6b37907759a8d6309dc4a10138b16ec11d

--- a/community/web2/core/src/main/java/org/geoserver/web/css/geoserver.css
+++ b/community/web2/core/src/main/java/org/geoserver/web/css/geoserver.css
@@ -110,6 +110,7 @@ width: 83em;
 min-width: 80%;
 margin: 0; 
 padding: 0;
+position: relative;
 }
 
 ul.plain {
@@ -191,7 +192,9 @@ text-align: left; /* IE */
 }
 
 #sidebar {
-float: left;
+position: absolute;
+top: 0;
+left: 0;
 width: 17em;
 padding: 38px 20px 0;
 } 
